--- a/css/main.css
+++ b/css/main.css
@@ -96,11 +96,25 @@ textarea {
    ========================================================================== */
 
 
+body{
+    font-family: 'Bitter', serif;
+}
+
+.container{
+    max-width: 960px;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.text-center{
+    text-align: center;
+}
 
 
-
-
-
+h1{
+    padding-top: 35px;
+    font-size: 3.5em;
+}
 
 
 
